git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1660 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/layout/list_item_broadcast.xml
+++ b/Love/res/layout/list_item_broadcast.xml
@@ -13,7 +13,8 @@
             android:id="@+id/avatar"
             android:layout_width="@dimen/avatar_size_broadcast"
             android:layout_height="@dimen/avatar_size_broadcast"
-            android:background="@drawable/avatar_default"
+            android:src="@drawable/avatar_default"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/app_name"/>
         
         <TextView
@@ -56,6 +57,7 @@
         android:id="@+id/player"
         android:layout_width="match_parent"
         android:layout_height="@dimen/video_height"
+        android:background="@drawable/default_video_bg"
         />
     
     <LinearLayout
