--- a/Love/res/layout/fragment_broadcast.xml
+++ b/Love/res/layout/fragment_broadcast.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/menu_frame"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" 
+    android:background="@color/BroadcastBg">
+<RelativeLayout 
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:background="@color/BroadcastBg">
@@ -42,3 +48,10 @@
 	    android:layout_height="match_parent"
 	    android:divider="#00000000"/>
 </RelativeLayout>
+<cc.ccme.love.widget.Player
+        android:id="@+id/player"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        />
+</FrameLayout>
