--- a/Love/res/layout/header_comment_video.xml
+++ b/Love/res/layout/header_comment_video.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/video_height"
     android:orientation="vertical" >
     <cc.ccme.love.widget.Player
         android:id="@+id/player"
